--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "PersonalApp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,9 +21,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^6.1.6",
     "jsonwebtoken": "^8.5.1",
+    "live-server": "^1.2.1",
+    "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0"
-  }
+  },
+  "description": ""
 }
